- Added new date/time functionality:   . support for diffing date/times through date_diff() / DateTime::diff().   . added DateInterval class to represent the difference between two date/times.   . support for parsing ISO intervals for use with DateInterval.   . date_add() / DateTime::add(), date_sub() / DateTime::sub() for applying an     interval to an existing date/time. - MFH: Fixed bug #44742 (timezone_offset_get() causes segmentation faults).